[gd_scene load_steps=23 format=3 uid="uid://bicqnypw1y33c"]

[ext_resource type="Theme" uid="uid://dx8n5sb8fw6e4" path="res://ui_theme.tres" id="1_n4sv4"]
[ext_resource type="Texture2D" uid="uid://c74t2krgwtclb" path="res://characters/plants/sprites/grass_1.tres" id="2_coccc"]
[ext_resource type="Script" uid="uid://c71mtb0vc3uum" path="res://characters/plants/scripts/plant_button.gd" id="2_hks5a"]
[ext_resource type="Script" uid="uid://c7wnel6l6wxjg" path="res://characters/plants/scripts/plant_texture.gd" id="3_coccc"]
[ext_resource type="Resource" uid="uid://cycm7jlenhewh" path="res://data/money.tres" id="4_kgrno"]
[ext_resource type="Resource" uid="uid://ce5fxm72vyo8d" path="res://characters/plants/data/plant1.tres" id="5_4s45c"]
[ext_resource type="Script" uid="uid://bpgw2mqe64mig" path="res://characters/plants/scripts/plant_event.gd" id="6_la6sr"]
[ext_resource type="Script" uid="uid://c180o3q181djf" path="res://characters/plants/scripts/dirt_texture.gd" id="6_wnn8r"]
[ext_resource type="Texture2D" uid="uid://c37cppw8isn12" path="res://characters/plants/sprites/dirt_1.tres" id="7_8fput"]
[ext_resource type="Texture2D" uid="uid://pd2n22wxtdxq" path="res://characters/plants/sprites/grass_2.tres" id="7_b2srs"]
[ext_resource type="Script" uid="uid://ckpmbme07fgl7" path="res://characters/plants/scripts/plant_progress_bar.gd" id="7_ecky2"]
[ext_resource type="Texture2D" uid="uid://bih5b6hnpo4m7" path="res://characters/plants/sprites/dirt_2.tres" id="8_b2srs"]
[ext_resource type="FontFile" uid="uid://ca7p87rppkfuv" path="res://fonts/BASQUIAT.otf" id="8_srawq"]
[ext_resource type="Script" uid="uid://oqxu4osgwk5f" path="res://characters/plants/scripts/plant_upgrades.gd" id="10_uhryd"]
[ext_resource type="Texture2D" uid="uid://gokhg1fq7k0t" path="res://characters/plants/sprites/plant_1_1.tres" id="11_0s5cb"]
[ext_resource type="Texture2D" uid="uid://ur55pk74wnfw" path="res://characters/plants/sprites/plant_sprinkler_0.tres" id="16_xons5"]
[ext_resource type="Texture2D" uid="uid://cen2y0yegpt7k" path="res://characters/plants/sprites/plant_sprinkler_1.tres" id="17_kyk40"]
[ext_resource type="Texture2D" uid="uid://c54sy8vkf5pey" path="res://characters/plants/sprites/plant_sprinkler_2.tres" id="18_y1jwl"]

[sub_resource type="LabelSettings" id="LabelSettings_uhryd"]
font = ExtResource("8_srawq")
font_size = 48
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_t3g72"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("16_xons5")]
}

[sub_resource type="Animation" id="Animation_uh6bo"]
resource_name = "run"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("16_xons5"), ExtResource("17_kyk40"), ExtResource("18_y1jwl"), ExtResource("16_xons5")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_seewa"]
_data = {
&"RESET": SubResource("Animation_t3g72"),
&"run": SubResource("Animation_uh6bo")
}

[node name="Plant" type="Button" node_paths=PackedStringArray("price_label", "upgrades") groups=["Plants"]]
offset_right = 256.0
offset_bottom = 256.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_n4sv4")
theme_type_variation = &"PlantButton"
script = ExtResource("2_hks5a")
plant = ExtResource("5_4s45c")
money = ExtResource("4_kgrno")
price_label = NodePath("Label")
upgrades = NodePath("PlantUpgrades")

[node name="DirtTexture" type="TextureRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_8fput")
expand_mode = 2
script = ExtResource("6_wnn8r")
grass_textures = Array[Texture2D]([ExtResource("2_coccc"), ExtResource("7_b2srs")])
dirt_textures = Array[Texture2D]([ExtResource("7_8fput"), ExtResource("8_b2srs")])

[node name="PlantEvent" type="Node" parent="DirtTexture"]
script = ExtResource("6_la6sr")
metadata/_custom_type_script = "uid://bpgw2mqe64mig"

[node name="PlantTexture" type="TextureRect" parent="." node_paths=PackedStringArray("button")]
z_index = -1
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
texture = ExtResource("11_0s5cb")
expand_mode = 2
script = ExtResource("3_coccc")
button = NodePath("..")

[node name="PlantEvent" type="Node" parent="PlantTexture"]
script = ExtResource("6_la6sr")
metadata/_custom_type_script = "uid://bpgw2mqe64mig"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.0
offset_top = -11.5
offset_right = 51.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "$%d"
label_settings = SubResource("LabelSettings_uhryd")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -27.0
grow_horizontal = 2
grow_vertical = 0

[node name="PlantProgressBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
script = ExtResource("7_ecky2")

[node name="PlantEvent" type="Node" parent="VBoxContainer/PlantProgressBar"]
script = ExtResource("6_la6sr")
metadata/_custom_type_script = "uid://bpgw2mqe64mig"

[node name="PlantUpgrades" type="Control" parent="." node_paths=PackedStringArray("events")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("10_uhryd")
events = NodePath("PlantEvent")

[node name="PlantEvent" type="Node" parent="PlantUpgrades"]
script = ExtResource("6_la6sr")
metadata/_custom_type_script = "uid://bpgw2mqe64mig"

[node name="Sprinkler" type="TextureRect" parent="PlantUpgrades"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("16_xons5")
expand_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlantUpgrades/Sprinkler"]
libraries = {
&"": SubResource("AnimationLibrary_seewa")
}
playback_auto_capture = false

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="purchased" from="DirtTexture/PlantEvent" to="DirtTexture" method="_on_plant_event_purchased"]
[connection signal="growth_changed" from="PlantTexture/PlantEvent" to="PlantTexture" method="_on_plant_event_growth_changed"]
[connection signal="growth_completed" from="PlantTexture/PlantEvent" to="PlantTexture" method="_on_plant_event_growth_completed"]
[connection signal="harvested" from="PlantTexture/PlantEvent" to="PlantTexture" method="_on_plant_event_harvested"]
[connection signal="planted" from="PlantTexture/PlantEvent" to="PlantTexture" method="_on_plant_event_planted"]
[connection signal="growth_changed" from="VBoxContainer/PlantProgressBar/PlantEvent" to="VBoxContainer/PlantProgressBar" method="_on_plant_event_growth_changed"]
[connection signal="harvested" from="VBoxContainer/PlantProgressBar/PlantEvent" to="VBoxContainer/PlantProgressBar" method="_on_plant_event_harvested"]
[connection signal="upgrade_installed" from="PlantUpgrades" to="DirtTexture" method="_on_plant_upgrades_upgrade_installed"]
